# tinylang

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: AddTinylang.cmake
doc/: Example.mod  Point.mod  example.c
grammar/: tinylang.l
include/tinylang/AST/: AST.h  ASTContext.h
include/tinylang/Basic/: Diagnostic.h  TokenKinds.h  Version.h
include/tinylang/CodeGen/: CGModule.h  CGProcedure.h  CodeGenerator.h
include/tinylang/Lexer/: Lexer.h  Token.h
include/tinylang/Parser/: Parser.h
include/tinylang/Sema/: Scope.h  Sema.h
lib/: CMakeLists.txt
lib/Basic/: Diagnostic.cpp  TokenKinds.cpp  Version.cpp
lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CMakeLists.txt  CodeGenerator.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp
test/: CMakeLists.txt
test/Marco/: CMakeLists.txt  MarcoTest.cpp
test/StringTest/: CMakeLists.txt  StringMapTest.cpp
tools/driver/: CMakeLists.txt  Driver.cpp
